Adiciona modelos e testes do consultório